<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventEditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        android:padding="8dp"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/event_edit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:ems="15"
        android:inputType="text"
        android:hint="@string/event_name"
        android:textAlignment="center"
        android:textColorHint="#A6A6C6"
        android:textColorHighlight="@color/red"
        android:letterSpacing="0.1"
        android:background="@drawable/event_label_bg"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/event_edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        android:padding="8dp"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/event_edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        android:padding="8dp"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/event_edit_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:letterSpacing="0.1"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/custom_progress"
        android:onClick="saveEventAction"/>



</LinearLayout>